// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rewrite must execute rule no-interpolate-file 1`] = `
"#!/usr/bin/env node
const fs = require('fs')

const a = '{{= some.var =}}'
const b = '{{= some.var =}}'
"
`;

exports[`rewrite must execute rule no-interpolate-next-line 1`] = `
"#!/usr/bin/env node
const fs = require('fs')

const a = '{{= some.var =}}'
const b = 'somevar'
"
`;

exports[`rewrite must render file 1`] = `
"#!/usr/bin/env node
const fs = require('fs')

 const a0 = '0'
 const a1 = '1'
 const a2 = '2'
 const a3 = '3'
 const a4 = '4'"
`;

exports[`rewrite must rewrite for loop 1`] = `
"#!/usr/bin/env node
const fs = require('fs')

 const a0 = '0'
 const a1 = '1'
 const a2 = '2'
 const a3 = '3'
 const a4 = '4'"
`;

exports[`rewrite must rewrite if else (1st condition) 1`] = `
"#!/usr/bin/env node
const fs = require('fs')

const a = 'a'"
`;

exports[`rewrite must rewrite if else (2nd condition) 1`] = `
"#!/usr/bin/env node
const fs = require('fs')

const b = 'b'"
`;

exports[`rewrite must rewrite if else (3rd condition) 1`] = `
"#!/usr/bin/env node
const fs = require('fs')

const c = 'c'"
`;
